# tipnos.github.io

./: .gitignore  .gitmodules  README.md  hugo.toml
assets/css/: figure.css
content/posts/: about.md  actix-middleware.md
content/posts/binaries-encoding/: 1-avro.md  2-json.md  3-protobuf.md  4-conclusion.md
layouts/partials/: footer.html  giscus.html  head.html
tutorials/binaries-encoding/avro/: Cargo.toml
tutorials/binaries-encoding/avro/avro/standalone-schemas/: Comment.avsc
tutorials/binaries-encoding/avro/schemas/: comment.avdl  locale.avdl
tutorials/binaries-encoding/avro/schemas/standalone/: Author.avsc  Locale.avsc
tutorials/binaries-encoding/avro/src/: main.rs
tutorials/binaries-encoding/json/: Cargo.toml
tutorials/binaries-encoding/json/schemas/: author.schema.json  comment.schema.json  locale.schema.json
tutorials/binaries-encoding/json/schemas/standalone/: comment.schema.json
tutorials/binaries-encoding/json/src/: main.rs
tutorials/binaries-encoding/protobuf/: Cargo.toml  build.rs
tutorials/binaries-encoding/protobuf/schemas/: author.proto  comment.proto  locale.proto
tutorials/binaries-encoding/protobuf/src/: main.rs
tutorials/rust/authentication-actix-middleware/: Cargo.toml
