[package]
name = "json"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
jsonschema = "0.26.1"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12.9"
